// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CreateWorkPackageModal.vue workpackage creation form should display available projects in the project dropdown 1`] = `
VueWrapper {
  "_emitted": {},
  "_emittedByOrder": [],
  "isFunctionalComponent": undefined,
  "selector": "[data-test-id="available-projects"]",
}
`;

exports[`CreateWorkPackageModal.vue workpackage creation form should send the form validation request when type is changed 1`] = `
VueWrapper {
  "_emitted": {},
  "_emittedByOrder": [],
  "isFunctionalComponent": undefined,
  "selector": "[data-test-id="available-statuses"]",
}
`;

exports[`CreateWorkPackageModal.vue workpackage creation form should set the available types, status and assignee when a project is selected 1`] = `
VueWrapper {
  "_emitted": {},
  "_emittedByOrder": [],
  "isFunctionalComponent": undefined,
  "selector": "[data-test-id="available-types"]",
}
`;

exports[`CreateWorkPackageModal.vue workpackage creation form should set the available types, status and assignee when a project is selected 2`] = `
VueWrapper {
  "_emitted": {},
  "_emittedByOrder": [],
  "isFunctionalComponent": undefined,
  "selector": "[data-test-id="available-statuses"]",
}
`;

exports[`CreateWorkPackageModal.vue workpackage creation form should set the available types, status and assignee when a project is selected 3`] = `
VueWrapper {
  "_emitted": {},
  "_emittedByOrder": [],
  "isFunctionalComponent": undefined,
  "selector": "[data-test-id="available-assignees"]",
}
`;
